--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found | TGPCET Library</title>
+    <title>404 - Page Not Found | BookHive</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
         * {
             margin: 0;
