--- a/views/info.ejs
+++ b/views/info.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= bookdata.title %> - TGPCET Library</title>
+    <title><%= bookdata.title %> - BookHive</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <style>
       * {
         margin: 0;
